<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_connect" />

    <EditText
        android:id="@+id/txtServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/txt_server_hint" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtServer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/btn_connect" />

    <TextView
        android:id="@+id/lblServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtServer"
        android:layout_alignBottom="@+id/txtServer"
        android:layout_toLeftOf="@+id/txtServer"
        android:text="@string/lbl_server"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtServer"
        android:layout_below="@+id/txtServer"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:ems="10" />

    <TextView
        android:id="@+id/lblDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtDeviceName"
        android:layout_alignBottom="@+id/txtDeviceName"
        android:layout_alignRight="@+id/lblPassword"
        android:text="@string/lbl_device_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignBottom="@+id/txtPassword"
        android:layout_alignRight="@+id/lblServer"
        android:text="@string/lbl_password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>